add config file

--- a/pom.xml
+++ b/pom.xml
@@ -4,4 +4,9 @@
   <artifactId>compute-penalty</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
+  <dependencies>
+
+  </dependencies>
+  
+  
 </project>
